WIP getting all features working in trunk - Fix playback buttons no longer work - Fix shade switch still visible eventhough is disabled

--- a/templates/default/app.less
+++ b/templates/default/app.less
@@ -190,6 +190,7 @@ form[id^="smallpart-student-index"] {
     font-size: 15px;
     word-wrap: break-word;
 	&>div>.et2_grid {background-color: #f4f4f4;}
+	et2-checkbox[disabled] {display: none;}
 	span.et2_checkbox_slideSwitch{
 		margin-right: 5px;
 		vertical-align: bottom;
