--- a/templates/default/theme2.css
+++ b/templates/default/theme2.css
@@ -2029,6 +2029,9 @@ form[id^="smallpart-student-index"] {
 form[id^="smallpart-student-index"] > div > .et2_grid {
   background-color: #f4f4f4;
 }
+form[id^="smallpart-student-index"] et2-checkbox[disabled] {
+  display: none;
+}
 form[id^="smallpart-student-index"] span.et2_checkbox_slideSwitch {
   margin-right: 5px;
   vertical-align: bottom;
